ecmascript/parser/tests/typescript-errors/recovery/class/has-extends.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/recovery/class/has-extends.ts:1:1
  |
1 | class extends Foo {
  | ^^^^^

